--- a/index.html
+++ b/index.html
@@ -9,34 +9,37 @@
 </head>
 <body>
     <!-- Barra de navegacion -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="images/icono-rick.png" alt="" width="30" height="24">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Buscar</button>
+              <button class="btn" type="submit">Buscar</button>
             </form>
           </div>
         </div>
       </nav>
-    <div class="container">
-        <!-- Titulo -->
-        <div class="text-center py-3 text-white">
-            <h1>App Rick and Morty</h1>
-        </div>
 
-        <!-- Cartas mediante el DOM -->
+        <!-- Titulo -->
+        <div class="text-center py-5 text-dark bg-white">
+            <h1>Rick and Morty</h1>
+        </div>
+    <div class="container">
+      <!-- Cartas mediante el DOM -->
             <div id="app"></div>
     </div>
+    
 
     <script src="bootstrap/dist/js/bootstrap.min.js"> </script>
     <script src="app.js"></script>
